k8s/host-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: host-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: host
  template:
    metadata:
      labels:
        app: host
    spec:
      containers:
        - name: host
          image: jerinirowz/mf-host:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: host-service
spec:
  selector:
    app: host
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
