k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mfe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # ← strips the prefix
spec:
  ingressClassName: nginx
  rules:
    - host: mfe.local
      http:
        paths:
          - path: /()(.*) # ← regex capture group
            pathType: ImplementationSpecific
            backend:
              service:
                name: host-service
                port:
                  number: 80

          - path: /product(/|$)(.*) # ← captures everything after /product
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-service
                port:
                  number: 80

          - path: /cart(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart-service
                port:
                  number: 80
